--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header>
-    <h1>Ponce Motors</h1>
+    <h1>Faubla Motors</h1>
     <p>Calidad Variedad y Economia al precio de bahia ¡COMPROBADO!</p>
   </header>
 
