--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>Consecsionaria Ponce</title>
+  <title>Consecsionaria Faubla</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
